# WinPCK-Linux

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  LINUX_PORT_README.md  MISSING_FEATURES.md  PORTING_STATUS.md  README.md  build-appimage.sh  build-standalone.sh  test_marshal.cs  test_pck.cpp  test_utf32_marshal.cs
MiscFuncs/: AllocMemPool.h  CharsCodeConv.cpp  Raw2HexString.h  TextLineSpliter.cpp
PckDll/DictHash/: DictHash.cpp
PckDll/MapViewFile/: MapViewFileMulti.h  MapViewFile_platform.h
PckDll/PckClass/: PckAlgorithmId.cpp  PckAlgorithmId.h  PckClass.cpp  PckClassBaseFeatures.cpp  PckClassExtract.cpp  PckClassFileDisk.cpp  PckClassFileDisk.h  PckClassHeadTail.cpp  PckClassHeadTailWriter.cpp  PckClassIndex.cpp  PckClassIndexRead.cpp  PckClassLog.cpp  PckClassLog.h  PckClassMount.cpp  PckClassNode.cpp  PckClassRebuild.cpp  PckClassRebuildFilter.cpp  PckClassVersionDetect.cpp  PckClassZlib.cpp  PckHeader.h  PckModelStrip.h  PckStructs.h  PckThreadRunner.cpp  PckThreadRunner.h  PckThreadRunnerMemory.cpp  PckThreadRunnerQueue.cpp
PckDll/PckControlCenter/: PckControlCenter.cpp  PckControlCenter.h  PckControlCenterInterface.cpp  PckControlCenterOperation.cpp
PckDll/ZupClass/: ZupClass.cpp  ZupClassFunction.cpp
PckDll/include/: compiler.h  gccException.h  pck_default_vars.h  platform_defs.h
PckDll/src/: pck_handle.cpp
avalonia_gui/: App.axaml  App.axaml.cs  Program.cs  README.md  ViewLocator.cs  WinPCK.Avalonia.csproj  app.manifest  launch_winpck.sh
avalonia_gui/Models/: PckFileEntry.cs  PckFileInfo.cs  PckTreeNode.cs
avalonia_gui/Native/: PckNative.cs
avalonia_gui/Services/: PckService.cs
avalonia_gui/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
avalonia_gui/Views/: MainWindow.axaml  MainWindow.axaml.cs  SearchDialog.axaml  SearchDialog.axaml.cs
avalonia_gui/publish/: WinPCK.Avalonia  WinPCK.Avalonia.deps.json
base64/: base64.cpp  base64.h
linux_cli/: main.cpp
linux_platform/: MapViewFile_posix.cpp  MapViewFile_posix.h  fileapi_stubs.h  winapi_stubs.h
zlib/: zconf.h
